k8s/postgres-tier/01-namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ehealth
